# cloudsnap

./: .env  .travis.yml  Cargo.toml  Procfile  README.md  docker-compose.yml
migrations/20170930090523_rforum/: down.sql  up.sql
migrations/2018-01-04-064431_create_posts/: down.sql  up.sql
public/css/: styles.css
public/js/: gtop.js
src/: lib.rs  main.rs
src/api/: auth.rs  community.rs  mod.rs  theme.rs  user.rs
src/controller/: article.rs  home.rs  user.rs
src/handler/: article.rs  community.rs  content.rs  mod.rs  theme.rs  user.rs
src/model/: community.rs  join.rs  mod.rs  response.rs  theme.rs  user.rs  wiki.rs
src/utils/: get_seconds.rs  mod.rs  render.rs  schema.rs
view/: article.tera  blog.tera  index.tera  login.tera  more.tera  new.tera  register.tera  user.tera  wiki.tera
view/error/: 404.tera
webapp/: index.html  package-lock.json  package.json  vue.config.js
webapp/public/: index.html  manifest.json
webapp/src/: App.vue  config.js
webapp/src/components/nav/: Mnav.vue
webapp/src/pages/community/: Community.vue
webapp/src/pages/explore/: Explore.vue
webapp/src/pages/home/: Home.vue
webapp/src/pages/new/: Create.vue  New.vue  Post.vue
webapp/src/pages/theme/: Theme.vue
webapp/src/pages/user/: Access.vue  Center.vue  SignUp.vue
webapp/src/router/: index.js
webapp/src/utils/: auth.js
webapp/src/views/community/: Community.vue
webapp/src/views/home/: Home.vue
webapp/src/views/more/: More.vue
webapp/src/views/new/: Post.vue
webapp/src/views/theme/: Theme.vue
