[package]
name = "muro"
version = "1.0.0"
authors = ["krircc <krircc@gmail.com>"]

[[bin]]
name = "muro"
path = "src/bin/main.rs"

[lib]
name = "muro_rs"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", default-features = false, features = ["tera_templates"] }
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
diesel = { version = "^0.16.0", features = ["postgres","chrono"] }
diesel_codegen = { version = "^0.16.0", features = ["postgres"] }
r2d2  = "^0.7.4"
r2d2_postgres = "^0.13.0"
r2d2-diesel = "^0.16.0"
postgres = {version= "^0.15.1", features = ["with-chrono"]}
dotenv = "^0.10.0"
dotenv_macros = "^0.10.0"
regex = "^0.1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "^0.7.0"
spongedown = { git = "https://github.com/ivanceras/spongedown.git" }
timeago = "0.0.1"
bcrypt = "^0.1.0"