[package]
name = "cloudsnap"
version = "0.1.0"
authors = ["Shaun Savage <savages@tvlinux.org>"]

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
diesel = { version = "^1.3.2", features = ["postgres","sqlite", "chrono","serde_json", "r2d2"] }
data-encoding = "2.1"
num_cpus = "1.0"

actix = "^0.5"
actix-web = "^0.6"
http = "^0.1.0"
postgres = {version= "^0.15.0", features = ["with-chrono"]}
dotenv = "^0.10.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "^0.1.0"
env_logger = "^0.5.0"
futures = "^0.1.0"
ring = "0.12.1"
pulldown-cmark = "^0.1.2"
timeago = "^0.1.0"
